# ai-wardrobe

./: .gitignore  README.md  cypress.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
Machine-Model/: mac_modelenv.ipynb
sql/: data.sql  schema.sql
wardrobe/: __init__.py  config.py  model.py
wardrobe/api/: __init__.py  posts.py
wardrobe/js/: clothes.jsx  file_upload.jsx  main.jsx  prompt.jsx
wardrobe/static/css/: index.css  style.css  user.css
wardrobe/static/machine_model/: mac_modelenv.ipynb
wardrobe/templates/: create.html  delete_confirmation.html  edit.html  edit_password.html  index.html  login.html  user.html
wardrobe/views/: __init__.py  index.py
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.css  App.js  Main.css  Main.js
web/src/components/: OutfitBlock.js  OutfitInput.css  OutfitInput.js  Upload.css  Upload.js
